--- a/Product pagina - Siwani/CSS/product.css
+++ b/Product pagina - Siwani/CSS/product.css
@@ -46,10 +46,14 @@
     main {
      display: block;
      background-color: #77AEC8;
+     margin-top: 10vh;
 
     }
 
     header {
+        position: fixed;
+        top: 0;
+        width: 100vw;
         display: flex;
         flex-direction: row;
         justify-content: center;
@@ -57,9 +61,6 @@
         background-color: var(--head-foot);
         height: 10vh;
         padding: 1vw 1vh;
-        position: fixed;
-        top: 0;
-        width: 100vw;
     }
 
     #monk-logo {
@@ -107,7 +108,7 @@
     }
 
     /*BANNER*/
-
+    
     #banner img {
         width: 100vw;
         background-repeat: no-repeat;
@@ -379,10 +380,14 @@
         display: flex;
         flex-direction: column;
         background-color: #77AEC8;
+        margin-top: 8vh;
 
     }
 
     header {
+        position: fixed;
+        top: 0;
+        width: 100vw;
         display: flex;
         flex-direction: row;
         justify-content: center;
@@ -390,9 +395,6 @@
         background-color: var(--head-foot);
         height: 10vh;
         padding: 1vw 1vh;
-        position: fixed;
-        top: 0;
-        width: 100vw;
     }
 
     #monk-logo {
@@ -751,12 +753,16 @@
         display: flex;
         flex-direction: column;
         background-color: var(--banner-knop);
+        margin-top: 8vh;
 
     }
 
     /*NAVIGATIE*/
 
     header {
+        position: fixed;
+        top: 0;
+        width: 100vw;
         display: flex;
         flex-direction: row;
         justify-content: center;
@@ -764,9 +770,6 @@
         background-color: var(--head-foot);
         height: 10vh;
         padding: 1vw 1vh;
-        position: fixed;
-        top: 0;
-        width: 100vw;
 
     }
 
