--- a/evenementen pagina - Tyler/CSS/evenementen.css
+++ b/evenementen pagina - Tyler/CSS/evenementen.css
@@ -89,6 +89,7 @@ header article {
    main {
        margin-top: 10vh;
        min-height: 74vh;
+       background-color: #92C877;
    }
 
 .evenement-details {
