--- a/evenementen pagina - Tyler/CSS/evenementen.css
+++ b/evenementen pagina - Tyler/CSS/evenementen.css
@@ -129,9 +129,15 @@ header article {
     display: none;
 }
 
+.evenement-informatie img {
+    width: 375px;
+    height: 300px;
+}
 
-
-
+.evenement-kaart img {
+    width: 300px;
+    height: 300px;
+}
 
 
 
